# agentic-data-platform

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  admin.html  chat.html  docker-compose.yml  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
infra/postgres/migrations/: 0001_initial_schema.sql  0002_sessions.sql  0003_vector_embeddings.sql
scripts/: localstack_init.sh  migrate.sh  run_eval.py  seed_docs.py
services/agent_api/: Dockerfile  pyproject.toml
services/agent_api/src/agent_api/: config.py  dependencies.py  main.py  startup.py
services/agent_api/src/agent_api/auth/: stub.py
services/agent_api/src/agent_api/db/: engine.py  models.py  run_store.py  session_store.py
services/agent_api/src/agent_api/middleware/: request_id.py
services/agent_api/src/agent_api/routers/: admin.py  agent.py  feedback.py  health.py  runs.py  skills.py
services/agent_api/src/agent_api/schemas/: requests.py  responses.py
services/agent_api/tests/: test_agent_router.py
services/skill_worker/: pyproject.toml
