[project]
name = "agentic-data-platform"
version = "0.1.0"
description = "Governed agentic data platform for Lightdash + dbt"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.50.0",
]

[tool.uv.sources]
contracts = { workspace = true }
skill_sdk = { workspace = true }
router = { workspace = true }
lightdash_adapter = { workspace = true }
dbt_adapter = { workspace = true }
business_docs_adapter = { workspace = true }
validation = { workspace = true }
artifacts = { workspace = true }
observability = { workspace = true }
feedback = { workspace = true }
evaluation = { workspace = true }
answer_business_question = { workspace = true }
discover_metrics_and_dashboards = { workspace = true }
explain_metric_definition = { workspace = true }
execute_data_question = { workspace = true }
agent_api = { workspace = true }
skill_worker = { workspace = true }

[tool.uv.workspace]
members = [
  "services/agent_api",
  "services/skill_worker",
  "packages/contracts",
  "packages/skill_sdk",
  "packages/router",
  "packages/lightdash_adapter",
  "packages/dbt_adapter",
  "packages/business_docs_adapter",
  "packages/validation",
  "packages/artifacts",
  "packages/observability",
  "packages/feedback",
  "packages/evaluation",
  "packages/skills/answer_business_question",
  "packages/skills/discover_metrics_and_dashboards",
  "packages/skills/explain_metric_definition",
  "packages/skills/execute_data_question",
]

[dependency-groups]
dev = [
  "ruff>=0.4.0",
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",
  "faker>=25.0.0",
  "respx>=0.21.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = [
  "contracts", "skill_sdk", "router",
  "lightdash_adapter", "dbt_adapter", "business_docs_adapter",
  "validation", "artifacts", "observability", "feedback", "evaluation",
  "answer_business_question", "discover_metrics_and_dashboards", "explain_metric_definition",
  "execute_data_question",
  "agent_api", "skill_worker",
]

[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short --import-mode=importlib"

[tool.coverage.run]
source = ["packages", "services"]
omit = ["*/tests/*", "*/migrations/*"]
